# PicoGK

./: .editorconfig  .gitignore  Cargo.toml  PicoGK.csproj  PicoGK_Library.cs  PicoGK_Mesh.cs  PicoGK_VectorExt.cs  PicoGK_Voxels.cs  PicoGK__Config.cs  README.md  build.rs
.github/workflows/: rust.yml
PicoGK_Test/: AdvancedExamples.cs  DOCUMENT_README.md  PicoGK_Test.csproj  Program.cs  RUST_MIGRATION.md  picogk_analysis.tex  picogk_analysis_part2.tex  picogk_complete.tex  picogk_final.tex
doc/: API_COMPLETENESS_ANALYSIS.md  API_GAP_REPORT.md  CSHARP_PUBLIC_API.md  CURRENT_STATUS.md  IMPLEMENTATION_PLAN.md  SAFETY.md
examples/: comprehensive_demo.rs  csharp_advanced_examples.rs  load_stl.rs  vdb_io_demo.rs  voxels_advanced_offset.rs  voxels_query.rs
native/linux-arm64/: README.md
native/linux-x64/: README.md
picogk-rs/: .gitignore  BUILD_FROM_SOURCE.md  FEATURE_CHECKLIST.md  FINAL_REPORT.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  PROGRESS_REPORT.md  README.md  README_VALIDATION.md  RUST_API_DESIGN.md  VALIDATION_REPORT.md
picogk-rs/examples/: basic.rs  gyroid.rs  mesh_transform_debug.rs  save_stl.rs
picogk-rs/src/: easing.rs  ffi_lock.rs  image_io.rs  mesh.rs  metadata.rs  polyline.rs  (+3 more)
src/: animation.rs  cli.rs  csv.rs  error.rs  ffi.rs  field_utils.rs  image.rs  implicit.rs  lattice.rs  lib.rs  log.rs  scalar_field.rs  slice.rs  types.rs  vector_ext.rs  vector_field.rs  viewer.rs
tests/: csharp_advanced_examples_parity.rs  mesh_transform_test.rs  simple_test.rs  stl_roundtrip_test.rs  stl_simple_test.rs  vdb_io_test.rs
tools/: clean.sh  verify.sh
(+18 files in other folders)
